[package]
name = "graph_theory_rust"
version = "0.1.0"
authors = ["Lyr-7D1h <lyr-7d1h@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "adjacency_matrix"
path = "./adjacency_matrix.rs"
[[bin]]
name = "dfs_fill"
path = "./dfs_fill.rs"
[[bin]]
name = "dijkstra"
path = "./dijkstra.rs"
[[bin]]
name = "mst"
path = "./mst.rs"
[[bin]]
name = "dfs"
path = "./dfs.rs"
[[bin]]
name = "bfs"
path = "./bfs.rs"
